[package]
name = "oubliette-db"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2"] }
base64 = "0.22.1"
foundationdb = { version = "0.10.0", features = ["fdb-7_3"] }
futures = "0.3.32"
hex = "0.4.3"
rmp-serde = "1.3.1"
rmpv = "1.3.1"
s-expression = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.149"
snafu = "0.9.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "sync"] }
