[package]
name = "oubliette-db"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros"] }
base64 = "0.22.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
foundationdb = { version = "0.10.0", features = ["fdb-7_3"] }
futures = "0.3.32"
hex = "0.4.3"
pin-project-lite = "0.2.17"
regex = "1.12.3"
rmp-serde = "1.3.1"
rmpv = "1.3.1"
s-expression = { git = "https://github.com/beebeeep/s-expression", branch = "fix-single-character-tokens" } # TODO: go back to crates.io version as soon as author releases new version with fix
serde = { version = "1.0.228", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.149"
snafu = "0.9.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }

[[example]]
name = "load"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
